--- a/apocalypse-user/apocalypse-user-app/pom.xml
+++ b/apocalypse-user/apocalypse-user-app/pom.xml
@@ -3,17 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>apocalypse-example</artifactId>
+        <artifactId>apocalypse-user</artifactId>
         <groupId>com.apocalypse</groupId>
         <version>1.0.0</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>apocalypse-example-app</artifactId>
+
+    <artifactId>apocalypse-user-app</artifactId>
     <packaging>jar</packaging>
-    <name>apocalypse-example-app</name>
+    <name>apocalypse-user-app</name>
 
     <dependencies>
+
         <dependency>
             <groupId>com.apocalypse</groupId>
             <artifactId>apocalypse-user-api</artifactId>
@@ -95,7 +96,7 @@
     </dependencies>
 
     <build>
-        <finalName>apocalypse-example-app</finalName>
+        <finalName>apocalypse-user-app</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
