--- a/apocalypse-user/apocalypse-user-app/src/main/resources/application-dev.yml
+++ b/apocalypse-user/apocalypse-user-app/src/main/resources/application-dev.yml
@@ -38,12 +38,12 @@ spring:
           - service
         health-check-path: ${server.servlet.context-path}/actuator/health
         instance-id: instance-${spring.cloud.client.ip-address}-${spring.application.name}-${server.port}
-#  rabbitmq:
-#    host: 127.0.0.1
-#    port: 5672
-#    username: guest
-#    password: guest
-#    listener:
-#      simple:
-#        # 手动ACK 不开启自动ACK模式，目的是防止报错后未正确处理消息丢失，默认 为 none
-#        acknowledge-mode: manual
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+    listener:
+      simple:
+        # 手动ACK 不开启自动ACK模式，目的是防止报错后未正确处理消息丢失，默认 为 none
+        acknowledge-mode: manual
