--- a/apocalypse-user/pom.xml
+++ b/apocalypse-user/pom.xml
@@ -24,5 +24,9 @@
             <artifactId>apocalypse-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
     </dependencies>
 </project>
