--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>2.1.5.RELEASE</version>
         <relativePath/>
     </parent>
     <properties>
@@ -63,6 +63,8 @@
         <java-jwt.version>3.8.1</java-jwt.version>
         <!-- 分布式任务调度平台 http://www.xuxueli.com/xxl-job/#/ -->
         <xxl-job.version>2.0.2</xxl-job.version>
+        <!-- 七牛云SDK -->
+        <qiniu-java-sdk.version>7.2.2</qiniu-java-sdk.version>
 
         <!-- 分布式服务部分 -->
         <!-- 分布式锁工具 https://github.com/redisson/redisson#quick-start -->
@@ -174,6 +176,11 @@
                 <version>${xxl-job.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.qiniu</groupId>
+                <artifactId>qiniu-java-sdk</artifactId>
+                <version>${qiniu-java-sdk.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
