--- a/apocalypse-example/apocalypse-example-app/src/main/resources/application-dev.yml
+++ b/apocalypse-example/apocalypse-example-app/src/main/resources/application-dev.yml
@@ -13,12 +13,6 @@ spring:
     database: 0
     host: localhost
     port: 6379
-    lettuce:
-      pool:
-        max-active: 8
-        max-wait: -1ms
-        max-idle: 8
-        min-idle: 0
     timeout: 10000ms
   cloud:
     inetutils:
@@ -52,3 +46,5 @@ spring:
       simple:
         # 手动ACK 不开启自动ACK模式，目的是防止报错后未正确处理消息丢失，默认 为 none
         acknowledge-mode: manual
+  cache:
+    type: redis
