spring cache Demo编写

--- a/apocalypse-example/apocalypse-example-app/pom.xml
+++ b/apocalypse-example/apocalypse-example-app/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-example-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.qiniu</groupId>
             <artifactId>qiniu-java-sdk</artifactId>
         </dependency>
