--- a/apocalypse-system/apocalypse-system-app/src/main/resources/job.properties
+++ b/apocalypse-system/apocalypse-system-app/src/main/resources/job.properties
@@ -2,14 +2,14 @@
 xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
 
 ### xxl-job executor address
-xxl.job.executor.appname=apocalypse-user
+xxl.job.executor.appname=apocalypse-system
 xxl.job.executor.ip=
-xxl.job.executor.port=9995
+xxl.job.executor.port=9993
 
 ### xxl-job, access token
 xxl.job.accessToken=
 
 ### xxl-job log path
-xxl.job.executor.logpath=logs/v1.0.0/apocalypse-user/job
+xxl.job.executor.logpath=logs/v1.0.0/apocalypse-system/job
 ### xxl-job log retention days
 xxl.job.executor.logretentiondays=-1
