redisson 编码器配置化

--- a/apocalypse-example/apocalypse-example-app/src/main/resources/application.yml
+++ b/apocalypse-example/apocalypse-example-app/src/main/resources/application.yml
@@ -52,3 +52,6 @@ spring:
   messages:
     basename: i18n/messages
     encoding: UTF-8
+  redis:
+    redisson:
+      config: classpath:/redisson.yaml
