--- a/apocalypse-common/pom.xml
+++ b/apocalypse-common/pom.xml
@@ -10,8 +10,12 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>apocalypse-common</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <name>apocalypse-common</name>
+    <modules>
+        <module>apocalypse-common-infrastructure</module>
+        <module>apocalypse-common-boot</module>
+    </modules>
 
     <dependencies>
         <dependency>
