--- a/apocalypse-example/pom.xml
+++ b/apocalypse-example/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>com.apocalypse</groupId>
-            <artifactId>apocalypse-common</artifactId>
+            <artifactId>apocalypse-common-infrastructure</artifactId>
         </dependency>
 
         <dependency>
