--- a/apocalypse-system/pom.xml
+++ b/apocalypse-system/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.apocalypse</groupId>
-            <artifactId>apocalypse-common</artifactId>
+            <artifactId>apocalypse-common-infrastructure</artifactId>
         </dependency>
 
         <dependency>
