--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
         <relativePath/>
     </parent>
     <properties>
@@ -34,7 +34,7 @@
         <!-- 基础框架 -->
         <!-- Spring Boot -->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
-        <springboot.version>2.1.5.RELEASE</springboot.version>
+        <springboot.version>2.1.6.RELEASE</springboot.version>
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
         <spring-cloud-dependencies.version>Greenwich.RELEASE</spring-cloud-dependencies.version>
         <!-- api 构建工具 https://github.com/swagger-api/swagger-core/wiki/ -->
@@ -85,9 +85,10 @@
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>com.apocalypse</groupId>
-                <artifactId>apocalypse-common</artifactId>
+                <artifactId>apocalypse-common-infrastructure</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -206,6 +207,7 @@
     </dependencyManagement>
 
     <dependencies>
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
