--- a/apocalypse-example/apocalypse-example-app/pom.xml
+++ b/apocalypse-example/apocalypse-example-app/pom.xml
@@ -14,6 +14,12 @@
     <name>apocalypse-example-app</name>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.apocalypse</groupId>
+            <artifactId>apocalypse-common-boot</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.apocalypse</groupId>
             <artifactId>apocalypse-user-api</artifactId>
