--- a/apocalypse-example/apocalypse-example-app/src/main/resources/application.yml
+++ b/apocalypse-example/apocalypse-example-app/src/main/resources/application.yml
@@ -13,6 +13,13 @@ mapper:
   style: camelhumpAndLowercase
   wrap-keyword: '`{0}`'
 
+swagger:
+  enable: true
+  title: Example模块
+  description: Example相关接口
+  version: 1.0.0
+  base-package: com.apocalypse.example.controller
+
 pagehelper:
   helperDialect: mysql
   reasonable: true
