--- a/example/example-app/src/main/resources/application-dev.yml
+++ b/example/example-app/src/main/resources/application-dev.yml
@@ -46,6 +46,7 @@ spring:
       simple:
         # 手动ACK 不开启自动ACK模式，目的是防止报错后未正确处理消息丢失，默认 为 none
         acknowledge-mode: manual
+    virtual-host: apocalypse
   cache:
     type: redis
     redis:
