--- a/system/system-app/src/main/resources/job.properties
+++ b/system/system-app/src/main/resources/job.properties
@@ -10,6 +10,6 @@ xxl.job.executor.port=9993
 xxl.job.accessToken=
 
 ### xxl-job log path
-xxl.job.executor.logpath=logs/v1.0.0/apocalypse-system/job
+xxl.job.executor.logpath=./logs//apocalypse-system/job
 ### xxl-job log retention days
 xxl.job.executor.logretentiondays=-1
