--- a/user/user-app/src/main/resources/job.properties
+++ b/user/user-app/src/main/resources/job.properties
@@ -10,6 +10,6 @@ xxl.job.executor.port=9995
 xxl.job.accessToken=
 
 ### xxl-job log path
-xxl.job.executor.logpath=logs/v1.0.0/apocalypse-user/job
+xxl.job.executor.logpath=./logs//apocalypse-user/job
 ### xxl-job log retention days
 xxl.job.executor.logretentiondays=-1
