--- a/example/example-app/src/main/resources/job.properties
+++ b/example/example-app/src/main/resources/job.properties
@@ -10,6 +10,6 @@ xxl.job.executor.port=9992
 xxl.job.accessToken=
 
 ### xxl-job log path
-xxl.job.executor.logpath=logs/v1.0.0/apocalypse-example/job
+xxl.job.executor.logpath=./logs//apocalypse-example/job
 ### xxl-job log retention days
 xxl.job.executor.logretentiondays=-1
