--- a/user/user-app/src/main/resources/application-dev.yml
+++ b/user/user-app/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 #debug: true
 logging:
-  path: logs/v1.0.0
+  path: ./logs/
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
