--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,14 @@
         <!-- 数据库部分 -->
         <mapper.version>3.4.2</mapper.version>
         <pagehelper.version>5.1.8</pagehelper.version>
+        <mybatis-spring-boot-starter.version>2.1.0</mybatis-spring-boot-starter.version>
         <!-- 通用Mapper -->
         <mapper-spring-boot-starter.version>2.1.5</mapper-spring-boot-starter.version>
         <!-- 分页插件 -->
         <pagehelper-spring-boot-starter.version>1.2.11</pagehelper-spring-boot-starter.version>
         <!-- 数据库连接池 -->
         <druid-spring-boot-starter.version>1.1.17</druid-spring-boot-starter.version>
+        <sharding-sphere.version>4.0.0-RC1</sharding-sphere.version>
 
         <!-- 工具部分 -->
         <!-- JSON工具 fastjson https://github.com/alibaba/fastjson/wiki -->
@@ -85,7 +87,6 @@
 
     <dependencyManagement>
         <dependencies>
-
             <dependency>
                 <groupId>com.apocalypse</groupId>
                 <artifactId>common-infrastructure</artifactId>
@@ -138,18 +139,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>${pagehelper.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>${pagehelper-spring-boot-starter.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox-swagger2.version}</version>
@@ -175,9 +164,45 @@
             </dependency>
 
             <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper</artifactId>
+                <version>${pagehelper.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper-spring-boot-starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot-starter.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>tk.mybatis</groupId>
                 <artifactId>mapper-spring-boot-starter</artifactId>
                 <version>${mapper-spring-boot-starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+                <version>${sharding-sphere.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>guava</artifactId>
+                        <groupId>com.google.guava</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>20.0</version>
             </dependency>
 
             <dependency>
