--- a/example/example-app/src/main/resources/application-dev.yml
+++ b/example/example-app/src/main/resources/application-dev.yml
@@ -68,21 +68,15 @@ spring:
         username: root
       names: ds0,ds1
     sharding:
-#      default-database-strategy:
-#        inline:
-#          algorithm-expression: ds$->{user_id % 2}
-#          sharding-column: user_id
       tables:
-        # 单库分表
-        t_order:
-          actual-data-nodes: ds0.order_$->{0..9}
+        # 分表
+        sharding_table:
+          actual-data-nodes: ds0.sharding_table_$->{0..4}
           table-strategy:
             inline:
-              algorithm-expression: order_$->{order_id % 10}
-              sharding-column: order_id
-#        t_order_item:
-#          actual-data-nodes: ds$->{0..1}.t_order_item_$->{0..1}
-#          table-strategy:
-#            inline:
-#              algorithm-expression: t_order_item_$->{order_id % 2}
-#              sharding-column: order_id
+              algorithm-expression: sharding_table_$->{id % 5}
+              sharding-column: id
+      default-data-source-name: ds0
+    props:
+      sql:
+        show: true
