--- a/example/example-app/src/main/resources/application-dev.yml
+++ b/example/example-app/src/main/resources/application-dev.yml
@@ -87,6 +87,18 @@ spring:
             inline:
               algorithm-expression: sharding_database_table_$->{id % 5}
               sharding-column: id
+        # 分库分表，按月分表
+        sharding_year_month:
+          actual-data-nodes: ds$->{0..1}.sharding_year_month_$->{2019..2019}_0$->{1..9},ds$->{0..1}.sharding_year_month_$->{2019..2019}_$->{10..12}
+          database-strategy:
+            inline:
+              sharding-column: id
+              algorithm-expression: ds$->{id % 2}
+          table-strategy:
+            standard:
+              sharding-column: order_date
+              precise-algorithm-class-name: com.apocalypse.example.sharding.MonthPreciseShardingAlgorithm
+              range-algorithm-class-name: com.apocalypse.example.sharding.MonthRangeShardingAlgorithm
       default-data-source-name: ds0
     props:
       sql:
