--- a/pom.xml
+++ b/pom.xml
@@ -234,6 +234,12 @@
                 <artifactId>alipay-sdk-java</artifactId>
                 <version>${alipay-sdk-java.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.github.javafaker</groupId>
+                <artifactId>javafaker</artifactId>
+                <version>${javafaker.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
