--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.1.7.RELEASE</version>
         <relativePath/>
     </parent>
     <properties>
@@ -34,7 +34,7 @@
         <!-- 基础框架 -->
         <!-- Spring Boot -->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
-        <springboot.version>2.1.6.RELEASE</springboot.version>
+        <springboot.version>2.1.7.RELEASE</springboot.version>
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
         <spring-cloud-dependencies.version>Greenwich.SR2</spring-cloud-dependencies.version>
         <!-- api 构建工具 https://github.com/swagger-api/swagger-core/wiki/ -->
@@ -70,6 +70,8 @@
         <qiniu-java-sdk.version>7.2.2</qiniu-java-sdk.version>
         <!-- 支付宝SDK -->
         <alipay-sdk-java.version>3.7.73.ALL</alipay-sdk-java.version>
+        <!-- WebSocket 客户端 -->
+        <Java-WebSocket.version>1.4.0</Java-WebSocket.version>
 
         <!-- 分布式服务部分 -->
         <!-- 分布式锁工具 https://github.com/redisson/redisson#quick-start -->
@@ -233,6 +235,12 @@
                 <groupId>com.alipay.sdk</groupId>
                 <artifactId>alipay-sdk-java</artifactId>
                 <version>${alipay-sdk-java.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.java-websocket</groupId>
+                <artifactId>Java-WebSocket</artifactId>
+                <version>${Java-WebSocket.version}</version>
             </dependency>
 
             <dependency>
